# admin-ui/src/gen/types/OverviewResponseModel.ts
@@ -1,17 +1,0 @@
-/**
- * Generated by Kubb (https://kubb.dev/).
- * Do not edit manually.
- */
-
-import type { OverviewRowModel } from './OverviewRowModel.ts';
-
-export type OverviewResponseModel = {
-  /**
-   * @type array
-   */
-  items: OverviewRowModel[];
-  /**
-   * @type number
-   */
-  total: number;
-};
