# admin-ui/src/gen/zod/overviewResponseModelSchema.ts
@@ -1,14 +1,0 @@
-/**
- * Generated by Kubb (https://kubb.dev/).
- * Do not edit manually.
- */
-
-import * as z from 'zod';
-import type { ToZod } from '../.kubb/ToZod.ts';
-import type { OverviewResponseModel } from '../types/OverviewResponseModel.ts';
-import { overviewRowModelSchema } from './overviewRowModelSchema.ts';
-
-export const overviewResponseModelSchema = z.object({
-  items: z.array(z.lazy(() => overviewRowModelSchema)),
-  total: z.number(),
-}) as unknown as ToZod<OverviewResponseModel>;
